testsuite/negative/bug-1133.n
interface IFooable1
{
  Foo: int { }; // E: expecting property getter/setter
}

class A
{
  Bar: string { }; // E: expecting property getter/setter
}
